--- a/src/static/css/home.less
+++ b/src/static/css/home.less
@@ -4,8 +4,8 @@
   height: 5rem;
   .ant-carousel .slick-slide {
     text-align: center;
-    height: 160px;
-    line-height: 160px;
+    height: 170px;
+    line-height: 170px;
     background: #364d79;
     overflow: hidden;
   }
@@ -17,5 +17,30 @@
     width: .1rem;
     height: .12rem;
     border-radius: 50%;
+  }
+  .linkBox{
+    width: 100%;
+   a{
+     display: inline-block;
+     width: 33%;
+     height: 2rem;
+     padding: .2rem .6rem;
+    div{
+      margin-left: .18rem;
+      padding-left: .2rem;
+      height: .7rem;
+      margin-bottom: .2rem;
+      img{
+       width: 70%;
+      }
+    }
+     p{
+       margin-bottom: 0;
+       font-size: .12rem;
+       line-height: .3rem;
+       text-align: center;
+       color: #000;
+     }
+   }
   }
 }
